# kisan-sahayak

./: .env  .gitignore  README.md  main.py  pyproject.toml
backend/app/information/: information_pipeline.py
backend/app/rag/: scheme_metadata.py
backend/app/rag/generation/: generator.py
backend/app/rag/ingestion/: chunking.py  extractors.py  headers.py  ingest.py  metadata.py
backend/app/rag/retrieval/: query_router.py  retriever.py
backend/app/rag/router/: mode_detector.py  query_refiner.py
backend/app/rag/vectorization/: build_vectorstore.py  vectorstore.py
backend/scripts/: get_unique_headers.py  inspect_vectorstore.py  run_information_tests.py
data/summaries/: KCC_summary.docx  PMFBY_summary.docx  PMKISAN_summary.docx  PMKMY_summary.docx  PMKSY_summary.docx  RWBCIS_summary.docx
docs/: Architecture.docx  Design_Decision.docx
frontend/telegram_bot/: bot.py  multilingual.py
