[project]
name = "kisan_f"
version = "0.1.0"
description = "AI-based agricultural schemes information system with Telegram interface"
readme = "README.md"
requires-python = ">=3.10,<3.13"

dependencies = [
    # ---------------- Core ----------------
    "python-dotenv>=1.0.1",

    # ---------------- API / Server ----------------
    "fastapi>=0.110.0",
    "uvicorn>=0.29.0",
    "pydantic>=2.6.0",

    # ---------------- LangChain / RAG ----------------
    "langchain>=0.1.16",
    "langchain-core>=0.1.46",
    "langchain-community>=0.0.30",
    "langchain-text-splitters>=0.0.1",
    "langchain-chroma>=0.1.2",
    "langchain-huggingface>=0.0.3",

    # ---------------- Vector DB ----------------
    "chromadb>=0.4.22",
    "numpy<2.0",

    # ---------------- Embeddings ----------------
    "sentence-transformers==2.6.1",
    "torch>=2.1.0",
    "huggingface-hub>=0.22.0",

    # ---------------- Document Ingestion ----------------
    "pymupdf4llm>=0.0.9",
    "python-docx>=1.1.0",

    # ---------------- LLM API ----------------
    "groq>=0.8.0",

    # ---------------- Telegram Bot ----------------
    "python-telegram-bot==20.7",
    "httpx>=0.25.0",

    # ---------------- Multilingual / Voice ----------------
    "soundfile",
    "SpeechRecognition",
    "gTTS",
    "deep-translator",
]

[project.optional-dependencies]
dev = [
    "pytest"
]
